--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0019.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0019.html
@@ -321,17 +321,11 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1786 596 1896 637">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">codi-</ins>
+            <ins title="nlp 2.00">codicum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 77 676 1896 737">
-        <span id="w_51" class="ocr_word" title="bbox 77 698 169 725">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cum</ins>
-            <del title="nlp 0.90">codicum</del>
-          </span>
-        </span>
         <span id="w_52" class="ocr_word" title="bbox 193 684 357 736">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">iugredi</ins>
@@ -622,17 +616,11 @@
         </span>
         <span id="w_99" class="ocr_word" title="bbox 1822 996 1898 1037">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ali-</ins>
+            <ins title="nlp 2.00">aliquid</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 77 1081 757 1136">
-        <span id="w_100" class="ocr_word" title="bbox 77 1082 176 1136">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quid</ins>
-            <del title="nlp 0.90">aliquid</del>
-          </span>
-        </span>
         <span id="w_101" class="ocr_word" title="bbox 208 1082 408 1123">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">momenti</ins>
@@ -838,8 +826,7 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1912 1316 1965 1356">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">P2</ins>
           </span>
         </span>
       </span>
@@ -1168,17 +1155,11 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1825 1713 1895 1754">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ad-</ins>
+            <ins title="nlp 2.00">addentis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 78 1799 471 1841">
-        <span id="w_189" class="ocr_word" title="bbox 78 1800 215 1841">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dentis</ins>
-            <del title="nlp 0.90">addentis</del>
-          </span>
-        </span>
         <span id="w_190" class="ocr_word" title="bbox 246 1799 471 1841">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">invenitur.</ins>
@@ -1249,9 +1230,14 @@
             <del title="nlp 0.90">(p.</del>
           </span>
         </span>
-        <span id="w_201" class="ocr_word" title="bbox 157 1960 265 2001">
+        <span id="w_201_0" class="ocr_word" title="bbox 157 1960 265 2001">
           <span class="alternatives">
-            <ins title="nlp 2.00">22a1–30b26),</ins>
+            <ins class="alt" title="nlp 2.00">22a1—30b26),</ins>
+          </span>
+        </span>
+        <span id="w_201_1" class="ocr_word" title="bbox 157 1960 265 2001">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 542 1973 720 2012">
@@ -1300,12 +1286,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">siguatas</ins>
             <del title="nlp 0.90">siguatas</del>
-          </span>
-        </span>
-        <span id="w_212" class="ocr_word" title="bbox 1926 1951 1952 1992">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">b</ins>
-            <del title="nlp 0.90">b</del>
           </span>
         </span>
       </span>
@@ -1360,17 +1340,11 @@
         </span>
         <span id="w_221" class="ocr_word" title="bbox 1758 2031 1897 2086">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">impri-</ins>
+            <ins title="nlp 2.00">imprimenda</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 79 2112 1896 2174">
-        <span id="w_222" class="ocr_word" title="bbox 79 2119 231 2160">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">menda</ins>
-            <del title="nlp 0.90">imprimenda</del>
-          </span>
-        </span>
         <span id="w_223" class="ocr_word" title="bbox 253 2119 429 2173">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">curavit,</ins>
@@ -1608,13 +1582,7 @@
       <span class="ocr_line" title="bbox 79 2432 1897 2492">
         <span id="w_263" class="ocr_word" title="bbox 79 2435 138 2489">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(p.</ins>
-            <del title="nlp 0.90">(p.</del>
-          </span>
-        </span>
-        <span id="w_264" class="ocr_word" title="bbox 163 2438 566 2492">
-          <span class="alternatives">
-            <ins title="nlp 2.00">113,17–117,13),</ins>
+            <ins title="nlp 2.00">(p. 113,17—117,13), </ins>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 615 2437 857 2479">
@@ -1696,15 +1664,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_278" class="ocr_word" title="bbox 1444 2512 1611 2554">
+        <span id="w_278_0" class="ocr_word" title="bbox 1444 2512 1611 2554">
           <span class="alternatives">
-            <ins title="nlp 2.00">53–57</ins>
+            <ins class="alt" title="nlp 2.00">53—57</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 1645 2509 1896 2563">
+        <span id="w_278_1" class="ocr_word" title="bbox 1444 2512 1611 2554">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">divulgavit.</ins>
-            <del title="nlp 0.90">divulgavit.</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
