--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0020.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0020.html
@@ -12,144 +12,7 @@
       <span class="ocr_line" title="bbox 546 926 1980 982">
         <span id="w_0" class="ocr_word" title="bbox 546 935 577 980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">S</ins>
-            <del title="nlp 0.90">S</del>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 598 932 640 980">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
-          </span>
-        </span>
-        <span id="w_2" class="ocr_word" title="bbox 659 934 698 982">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 719 933 756 981">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_4" class="ocr_word" title="bbox 777 933 813 979">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">L</ins>
-            <del title="nlp 0.90">L</del>
-          </span>
-        </span>
-        <span id="w_5" class="ocr_word" title="bbox 836 932 873 978">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_6" class="ocr_word" title="bbox 893 933 942 980">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_7" class="ocr_word" title="bbox 965 933 1001 979">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_8" class="ocr_word" title="bbox 1022 931 1063 979">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">N</ins>
-            <del title="nlp 0.90">N</del>
-          </span>
-        </span>
-        <span id="w_9" class="ocr_word" title="bbox 1087 932 1124 978">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1147 932 1187 979">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1210 931 1258 977">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 1311 929 1350 977">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_13" class="ocr_word" title="bbox 1370 930 1412 978">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">R</ins>
-            <del title="nlp 0.90">R</del>
-          </span>
-        </span>
-        <span id="w_14" class="ocr_word" title="bbox 1433 933 1474 976">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
-          </span>
-        </span>
-        <span id="w_15" class="ocr_word" title="bbox 1495 929 1534 976">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_16" class="ocr_word" title="bbox 1554 929 1592 976">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">F</ins>
-            <del title="nlp 0.90">F</del>
-          </span>
-        </span>
-        <span id="w_17" class="ocr_word" title="bbox 1613 931 1656 976">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
-          </span>
-        </span>
-        <span id="w_18" class="ocr_word" title="bbox 1676 929 1715 976">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
-          </span>
-        </span>
-        <span id="w_19" class="ocr_word" title="bbox 1736 928 1758 977">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1779 928 1820 977">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">0</ins>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 1843 928 1887 976">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">N</ins>
-            <del title="nlp 0.90">N</del>
-          </span>
-        </span>
-        <span id="w_22" class="ocr_word" title="bbox 1907 928 1931 976">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
-          </span>
-        </span>
-        <span id="w_23" class="ocr_word" title="bbox 1949 926 1980 974">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">S</ins>
-            <del title="nlp 0.90">S</del>
+            <ins title="nlp 2.00">SUPPLEMENTUM PRAEFATIONIS</ins>
           </span>
         </span>
       </span>
@@ -315,18 +178,7 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 816 1412 842 1453">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">f.</ins>
-            <del title="nlp 0.90">f.</del>
-          </span>
-        </span>
-        <span id="w_52" class="ocr_word" title="bbox 907 1437 962 1440">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">2—</ins>
-          </span>
-        </span>
-        <span id="w_53" class="ocr_word" title="bbox 971 1413 1045 1452">
-          <span class="alternatives">
-            <ins title="nlp 2.00">41v</ins>
+            <ins title="nlp 2.00">f. 2—41v</ins>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1098 1411 1404 1464">
@@ -361,9 +213,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_60" class="ocr_word" title="bbox 478 1505 530 1510">
+        <span id="w_60_0" class="ocr_word" title="bbox 478 1505 530 1510">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">42r—54r</ins>
+          </span>
+        </span>
+        <span id="w_60_1" class="ocr_word" title="bbox 478 1505 530 1510">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 634 1482 852 1535">
@@ -378,27 +235,20 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_65" class="ocr_word" title="bbox 1025 1505 1078 1510">
+        <span id="w_65_0" class="ocr_word" title="bbox 1025 1505 1078 1510">
           <span class="alternatives">
-            <ins title="nlp 2.00">54r—108v</ins>
+            <ins class="alt" title="nlp 2.00">54v—108v</ins>
+          </span>
+        </span>
+        <span id="w_65_1" class="ocr_word" title="bbox 1025 1505 1078 1510">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1223 1479 1573 1521">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">commentavium</ins>
             <del title="nlp 0.90">commentavium</del>
-          </span>
-        </span>
-        <span id="w_68" class="ocr_word" title="bbox 1607 1477 1791 1519">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">exhibet.</ins>
-            <del title="nlp 0.90">exhibet.</del>
-          </span>
-        </span>
-        <span id="w_69" class="ocr_word" title="bbox 1853 1478 2174 1532">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">prolegomena,</ins>
-            <del title="nlp 0.90">prolegomena,</del>
           </span>
         </span>
       </span>
@@ -602,13 +452,7 @@
         </span>
         <span id="w_103" class="ocr_word" title="bbox 509 1758 569 1811">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(p.</ins>
-            <del title="nlp 0.90">(p.</del>
-          </span>
-        </span>
-        <span id="w_104" class="ocr_word" title="bbox 593 1758 706 1811">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">91,8)—ἐκείνων</ins>
+            <ins title="nlp 2.00">(p. 91,8)—ἐκείνων </ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 975 1773 1017 1797" lang="grc">
@@ -815,17 +659,11 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 2085 1905 2179 1945">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">per-</ins>
+            <ins title="nlp 2.00">perturbationis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 357 1961 2178 2016">
-        <span id="w_145" class="ocr_word" title="bbox 357 1963 611 2004">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">turbationis</ins>
-            <del title="nlp 0.90">perturbationis</del>
-          </span>
-        </span>
         <span id="w_146" class="ocr_word" title="bbox 645 1963 945 2015">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">iudagantibus</ins>
@@ -904,9 +742,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1048 2031 1174 2084">
+        <span id="w_159_0" class="ocr_word" title="bbox 1048 2031 1174 2084">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">88,25—91,8</ins>
+          </span>
+        </span>
+        <span id="w_159_1" class="ocr_word" title="bbox 1048 2031 1174 2084">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_162" class="ocr_word" title="bbox 1359 2033 1466 2072" lang="grc">
@@ -929,12 +772,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">scribendo,</ins>
             <del title="nlp 0.90">scribendo,</del>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 2081 2043 2175 2070">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cum</ins>
-            <del title="nlp 0.90">cum</del>
           </span>
         </span>
       </span>
@@ -1608,9 +1445,14 @@
             <ins title="nlp 2.00">(p.</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 484 2877 537 2881" lang="grc">
+        <span id="w_277_0" class="ocr_word" title="bbox 484 2877 537 2881">
           <span class="alternatives">
-            <ins title="nlp 2.00">1–39)</ins>
+            <ins class="alt" title="nlp 2.00">1—39)</ins>
+          </span>
+        </span>
+        <span id="w_277_1" class="ocr_word" title="bbox 484 2877 537 2881">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 656 2853 706 2894" lang="grc">
@@ -1636,26 +1478,19 @@
             <del title="nlp 0.90">(p.</del>
           </span>
         </span>
-        <span id="w_282" class="ocr_word" title="bbox 1405 2858 1460 2898">
+        <span id="w_282_0" class="ocr_word" title="bbox 1405 2858 1460 2898">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">40—104)</ins>
+          </span>
+        </span>
+        <span id="w_282_1" class="ocr_word" title="bbox 1405 2858 1460 2898">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1678 2857 1728 2897" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Α.</ins>
-          </span>
-        </span>
-        <span id="w_286" class="ocr_word" title="bbox 1769 2857 1910 2909">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Elter,</ins>
-            <del title="nlp 0.90">Elter,</del>
-          </span>
-        </span>
-        <span id="w_287" class="ocr_word" title="bbox 1959 2855 2177 2910">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">professor</ins>
-            <del title="nlp 0.90">professor</del>
           </span>
         </span>
       </span>
