--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0067.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0067.html
@@ -217,7 +217,7 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1494 414 1753 469" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θεωρητικὸν</ins>
+            <ins title="nlp 2.00">(θεωρητικὸν</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1784 416 1869 468" lang="grc">
@@ -388,7 +388,7 @@
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1185 621 1247 674" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1279 621 1349 674" lang="grc">
@@ -763,19 +763,19 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 1696 1033 1772 1089">
+        <span id="w_147_0" class="ocr_word" title="bbox 1696 1033 1772 1089">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τὸ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_147_1" class="ocr_word" title="bbox 1696 1033 1772 1089">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1794 1050 1869 1074" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 1890 1045 1924 1071">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
       </span>
