--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0107.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0107.html
@@ -217,9 +217,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 298 753 1871 815">
-        <span id="w_39" class="ocr_word" title="bbox 298 753 597 809" lang="grc">
+        <span id="w_39_0" class="ocr_word" title="bbox 298 753 597 809">
           <span class="alternatives">
-            <ins title="nlp 2.00">"Γποσχόμενος</ins>
+            <ins class="alt" title="nlp 2.00">Ὑποσχόμενος</ins>
+          </span>
+        </span>
+        <span id="w_39_1" class="ocr_word" title="bbox 298 753 597 809">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 628 755 648 794" lang="grc">
@@ -250,11 +255,6 @@
         <span id="w_45" class="ocr_word" title="bbox 1640 777 1686 801" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
-          </span>
-        </span>
-        <span id="w_46" class="ocr_word" title="bbox 1716 777 1871 815" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γενικώτατα</ins>
           </span>
         </span>
       </span>
@@ -2401,7 +2401,7 @@
       <span class="ocr_line" title="bbox 120 2998 1932 3049">
         <span id="w_461" class="ocr_word" title="bbox 120 2998 197 3037">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τῶν om.)</ins>
+            <ins title="nlp 2.00">τῶν om.)</ins>
           </span>
         </span>
         <span id="w_462" class="ocr_word" title="bbox 225 3001 304 3040" lang="grc">
