--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0021.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0021.html
@@ -143,17 +143,11 @@
         </span>
         <span id="w_23" class="ocr_word" title="bbox 1773 345 1910 386">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">termi-</ins>
+            <ins title="nlp 2.00">terminatur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 95 413 1912 470">
-        <span id="w_24" class="ocr_word" title="bbox 95 423 220 460">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">natur</ins>
-            <del title="nlp 0.90">terminatur</del>
-          </span>
-        </span>
         <span id="w_25" class="ocr_word" title="bbox 256 417 303 470">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(f.</ins>
@@ -328,17 +322,11 @@
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1787 549 1915 592">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fluxe-</ins>
+            <ins title="nlp 2.00">fluxerunt</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 96 619 1912 677">
-        <span id="w_55" class="ocr_word" title="bbox 96 629 193 666">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">runt</ins>
-            <del title="nlp 0.90">fluxerunt</del>
-          </span>
-        </span>
         <span id="w_56" class="ocr_word" title="bbox 223 623 370 677">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">paucis</ins>
@@ -914,7 +902,7 @@
         </span>
         <span id="w_149" class="ocr_word" title="bbox 767 1238 906 1284" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπειδὴ</ins>
+            <ins title="nlp 2.00">Ἐπειδὴ</ins>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 935 1251 1019 1284" lang="grc">
@@ -1124,8 +1112,7 @@
         </span>
         <span id="w_189" class="ocr_word" title="bbox 931 1358 972 1390">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(Jv</ins>
-            <del title="nlp 0.90">(Jv</del>
+            <ins title="nlp 2.00">6v</ins>
           </span>
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1013 1354 1027 1402">
@@ -2892,8 +2879,7 @@
         </span>
         <span id="w_529" class="ocr_word" title="bbox 1619 2405 1635 2451">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jj</ins>
-            <del title="nlp 0.90">jj</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_530" class="ocr_word" title="bbox 1664 2415 1698 2450">
@@ -3993,8 +3979,7 @@
       <span class="ocr_line" title="bbox 100 3220 1912 3278">
         <span id="w_735" class="ocr_word" title="bbox 100 3239 162 3262">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_736" class="ocr_word" title="bbox 191 3230 206 3276">
