--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0069.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0069.html
@@ -1149,9 +1149,14 @@
             <ins class="alt" title="nlp 1.00">μήποτε</ins>
           </span>
         </span>
-        <span id="w_225" class="ocr_word" title="bbox 1116 1685 1238 1741" lang="grc">
+        <span id="w_225_0" class="ocr_word" title="bbox 1116 1685 1238 1741">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;περὶ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;περὶ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_225_1" class="ocr_word" title="bbox 1116 1685 1238 1741">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1260 1700 1328 1739" lang="grc">
@@ -1167,11 +1172,6 @@
         <span id="w_228" class="ocr_word" title="bbox 1468 1684 1696 1738" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Πυθαγόραν</ins>
-          </span>
-        </span>
-        <span id="w_229" class="ocr_word" title="bbox 1721 1697 1847 1723" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μουσικῆς</ins>
           </span>
         </span>
       </span>
