--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0108.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0108.html
@@ -655,9 +655,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 753 884 1007 939" lang="grc">
+        <span id="w_125_0" class="ocr_word" title="bbox 753 884 1007 939">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(μεταβάλλει</ins>
+          </span>
+        </span>
+        <span id="w_125_1" class="ocr_word" title="bbox 753 884 1007 939">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 1044 899 1116 937" lang="grc">
@@ -693,11 +698,6 @@
         <span id="w_133" class="ocr_word" title="bbox 1876 894 2079 935" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἱστόρησεν</ins>
-          </span>
-        </span>
-        <span id="w_134" class="ocr_word" title="bbox 2108 880 2166 915">
-          <span class="alternatives">
-            <ins title="nlp 2.00">75r</ins>
           </span>
         </span>
       </span>
@@ -1821,9 +1821,9 @@
             <ins title="nlp 2.00">συμβεβηκότα),</ins>
           </span>
         </span>
-        <span id="w_352" class="ocr_word" title="bbox 2105 2126 2163 2161">
+        <span id="w_352_0" class="ocr_word" title="bbox 2105 2126 2163 2161">
           <span class="alternatives">
-            <ins title="nlp 2.00">75ν</ins>
+            <ins class="alt" title="nlp 2.00">75v</ins>
           </span>
         </span>
       </span>
