--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0072.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0072.html
@@ -645,7 +645,7 @@
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1361 891 1551 946" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περιέχει</ins>
+            <ins title="nlp 2.00">(περιέχει</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1580 906 1652 946" lang="grc">
@@ -722,7 +722,7 @@
         </span>
         <span id="w_139" class="ocr_word" title="bbox 1971 961 2011 1014" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 2042 976 2113 1015" lang="grc">
@@ -1280,7 +1280,7 @@
         </span>
         <span id="w_248" class="ocr_word" title="bbox 967 1582 1023 1639">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(6)</ins>
+            <ins title="nlp 2.00">&amp;#x003C;ὁ&amp;#x003Ε;</ins>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1045 1585 1106 1624" lang="grc">
