--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0109.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0109.html
@@ -1156,7 +1156,7 @@
       <span class="ocr_line" title="bbox 197 1628 1870 1686">
         <span id="w_222" class="ocr_word" title="bbox 197 1651 227 1684" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">p. 6,3 Ἀλλ᾿ </ins>
+            <ins title="nlp 2.00">Ἀλλ᾿ </ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 490 1631 565 1670" lang="grc">
@@ -1842,7 +1842,7 @@
       <span class="ocr_line" title="bbox 126 2699 1889 2748">
         <span id="w_353" class="ocr_word" title="bbox 126 2701 143 2733" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">7 ἑξῆς V</ins>
+            <ins title="nlp 2.00">ἑξῆς V</ins>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 439 2703 459 2737">
@@ -1902,7 +1902,7 @@
         </span>
         <span id="w_364" class="ocr_word" title="bbox 1716 2700 1759 2732" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">14 ἐπεὶ C</ins>
+            <ins title="nlp 2.00">ἐπεὶ C</ins>
           </span>
         </span>
       </span>
@@ -2304,7 +2304,7 @@
       <span class="ocr_line" title="bbox 127 3049 1846 3101">
         <span id="w_437" class="ocr_word" title="bbox 127 3051 167 3084">
           <span class="alternatives">
-            <ins title="nlp 2.00">22 τῶν</ins>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
         <span id="w_438" class="ocr_word" title="bbox 192 3057 258 3086" lang="grc">
