--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0073.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0073.html
@@ -336,7 +336,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1741 578 1841 627" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(φειωλία</ins>
+            <ins title="nlp 2.00">φειωλία</ins>
           </span>
         </span>
       </span>
@@ -400,7 +400,7 @@
       <span class="ocr_line" title="bbox 167 704 1839 764">
         <span id="w_76" class="ocr_word" title="bbox 167 705 334 758" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀσωτία</ins>
+            <ins title="nlp 2.00">(ἀσωτία</ins>
           </span>
         </span>
         <span id="w_77" class="ocr_word" title="bbox 364 720 435 759" lang="grc">
@@ -742,7 +742,7 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1641 1139 1743 1193" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκεῖ</ins>
+            <ins title="nlp 2.00">(ἐκεῖ</ins>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 1772 1139 1844 1193" lang="grc">
@@ -826,7 +826,7 @@
         </span>
         <span id="w_159" class="ocr_word" title="bbox 498 1272 598 1323" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκεῖ</ins>
+            <ins title="nlp 2.00">(ἐκεὶ</ins>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 629 1272 699 1326" lang="grc">
