--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0110.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0110.html
@@ -68,9 +68,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1108 379 1396 438">
-        <span id="w_10" class="ocr_word" title="bbox 1108 382 1269 438">
+        <span id="w_10_0" class="ocr_word" title="bbox 1108 382 1269 438">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις κδ΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_10_1" class="ocr_word" title="bbox 1108 382 1269 438">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κδ'&amp;003E;.</ins>
           </span>
         </span>
       </span>
@@ -495,9 +500,9 @@
             <ins class="alt" title="nlp 1.00">κύων</ins>
           </span>
         </span>
-        <span id="w_96" class="ocr_word" title="bbox 2099 1028 2157 1063">
+        <span id="w_96_0" class="ocr_word" title="bbox 2099 1028 2157 1063">
           <span class="alternatives">
-            <ins title="nlp 2.00">76ν</ins>
+            <ins class="alt" title="nlp 2.00">76v</ins>
           </span>
         </span>
       </span>
@@ -569,16 +574,11 @@
         </span>
         <span id="w_110" class="ocr_word" title="bbox 2045 1097 2092 1138" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴ-</ins>
+            <ins title="nlp 2.00">εἴδους </ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 415 1166 2096 1220">
-        <span id="w_111" class="ocr_word" title="bbox 415 1185 503 1210" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δους</ins>
-          </span>
-        </span>
         <span id="w_112" class="ocr_word" title="bbox 534 1170 812 1209" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀναιρουμένου</ins>
@@ -2546,7 +2546,7 @@
         </span>
         <span id="w_496" class="ocr_word" title="bbox 1862 2989 1902 3021" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">16 ἐν</ins>
+            <ins title="nlp 2.00">ἐν</ins>
           </span>
         </span>
         <span id="w_497" class="ocr_word" title="bbox 1975 3000 2024 3021" lang="grc">
@@ -2636,7 +2636,7 @@
         </span>
         <span id="w_512" class="ocr_word" title="bbox 1592 3046 1633 3078" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> 17 ἐν ταῖς Κατ.]</ins>
+            <ins title="nlp 2.00">ἐν ταῖς Κατ.]</ins>
           </span>
         </span>
         <span id="w_513" class="ocr_word" title="bbox 1948 3058 1981 3091">
