--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0075.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0075.html
@@ -1330,7 +1330,7 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 274 2779 415 2835" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χωρὶς</ins>
+            <ins title="nlp 2.00">(χωρὶς</ins>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 444 2797 514 2836" lang="grc">
@@ -1455,7 +1455,7 @@
         </span>
         <span id="w_280" class="ocr_word" title="bbox 227 2972 427 3018" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ζητοῦντες&amp;x003E;</ins>
+            <ins title="nlp 2.00">x003E;</ins>
           </span>
         </span>
         <span id="w_281" class="ocr_word" title="bbox 452 2987 494 3008" lang="grc">
